Bugfix, News Scrollbar, Foto verbessert

--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ header nav ul li #upload:active {
 	float: left;
 	margin: 10px;
 	padding: 10px;
+	overflow: auto;
 }
 
 #welcome-about p, #welcome-from p, #welcome-technologies p, #welcome-news p {
